--- a/BethanysPieShop/appsettings.Development.json
+++ b/BethanysPieShop/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=localhost;Database=BethanysPieShop;User Id=sa;Password=some_strong_password_5@F3;MultipleActiveResultSets=true"
   }
 }
